clean-up and Result to Record